# locksmith-micro-app-designer

./: .gitignore  CLAUDE.md  LICENSE  README.md  locksmith-plugin.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/specs/: 2026-05-09-micro-app-template-authoring-and-data-model.md
docs/superpowers/plans/: 2026-05-11-micro-app-template-spec-hardening.md  2026-05-12-designer-plugin-addendum.md  2026-05-12-designer-plugin.md  2026-05-14-designer-plugin-v1-fidelity-phase1.md  2026-05-14-designer-plugin-v1-fidelity-phase3a-shared.md  2026-05-14-designer-plugin-v1-fidelity-phase3b-commands-exports.md  2026-05-14-designer-plugin-v1-fidelity-phase3c-workflows-projections.md  2026-05-14-designer-plugin-v1-fidelity-phase3d-rules-others.md  2026-06-11-wallet-ui-integration-harness.md
docs/superpowers/specs/: 2026-05-12-designer-plugin.md  2026-05-15-micro-app-runtime-design.md  2026-06-11-wallet-ui-integration-harness-design.md
scripts/: micro_app_saidify.py  micro_app_validate.py  saidify_acdc_schema.py  wallet.py
skills/micro-app-template-gen/: SKILL.md
src/locksmith_micro_app_designer/: README.md  __init__.py  crossref.py  db.py  dialogs.py  keys.py  model.py  plugin.py  seed_fixtures.py  store.py  validation.py
tests/integration/: README.md  conftest.py  test_actions.py  test_client.py  test_designer_smoke.py  test_instance.py  test_instance_boots.py  test_selectors.py  test_vault_lifecycle.py
tests/integration/driver/: client.py  (+3 more)
tests/micro_app_template/: conftest.py  test_canonical_json.py  test_cli.py  test_saidify.py  test_validate.py
(+55 files in other folders)
